updated plots for stock-analysis

--- a/notebooks/stock-analysis.ipynb
+++ b/notebooks/stock-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-11-11 17:25:26--  http://deeplearning.net/data/mnist/mnist.pkl.gz\n",
+      "--2019-11-12 07:59:06--  http://deeplearning.net/data/mnist/mnist.pkl.gz\n",
       "Resolving deeplearning.net (deeplearning.net)... 132.204.26.28\n",
       "Connecting to deeplearning.net (deeplearning.net)|132.204.26.28|:80... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 16168813 (15M) [application/x-gzip]\n",
-      "Saving to: ‘mnist.pkl.gz’\n",
+      "Saving to: ‘mnist.pkl.gz.1’\n",
       "\n",
-      "mnist.pkl.gz        100%[===================>]  15.42M  8.14MB/s    in 1.9s    \n",
+      "mnist.pkl.gz.1      100%[===================>]  15.42M  6.04MB/s    in 2.6s    \n",
       "\n",
-      "2019-11-11 17:25:28 (8.14 MB/s) - ‘mnist.pkl.gz’ saved [16168813/16168813]\n",
+      "2019-11-12 07:59:09 (6.04 MB/s) - ‘mnist.pkl.gz.1’ saved [16168813/16168813]\n",
       "\n"
      ]
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,23 +79,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10 error 0.56565\n",
-      "Epoch 20 error 0.33608\n",
-      "Epoch 30 error 0.21986\n",
-      "Epoch 40 error 0.16201\n",
-      "Epoch 50 error 0.12846\n",
-      "Epoch 60 error 0.10800\n",
-      "Epoch 70 error 0.09404\n",
-      "Epoch 80 error 0.08380\n",
-      "Epoch 90 error 0.07576\n",
-      "Epoch 100 error 0.06912\n"
+      "Epoch 10 error 0.50529\n",
+      "Epoch 20 error 0.29079\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-856175d8d89d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m                                        classes=np.unique(Ttrain), use_gpu=False)\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mnnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Adam'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.05\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Development/cs/cs545/augmented-image-classification/src/neuralnetworkclassifier.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, X, T, n_epochs, optim, learning_rate, verbose)\u001b[0m\n\u001b[1;32m    160\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror_trace\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    161\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 162\u001b[0;31m             \u001b[0merror\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    163\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    164\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda3/lib/python3.7/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    116\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m         \"\"\"\n\u001b[0;32m--> 118\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    119\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda3/lib/python3.7/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     91\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     92\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -112,35 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NeuralNetwork_Convolutional(\n",
-       "                            n_channels_in_image=1,\n",
-       "                            image_size=28,\n",
-       "                            n_units_in_conv_layers=[10],\n",
-       "                            kernels_size_and_stride=[(7, 3)],\n",
-       "                            n_units_in_fc_hidden_layers=[],\n",
-       "                            classes=[0 1 2 3 4 5 6 7 8 9],\n",
-       "                            use_gpu=False)\n",
-       "Sequential(\n",
-       "  (conv_0): Conv2d(1, 10, kernel_size=(7, 7), stride=(3, 3))\n",
-       "  (output_0): Tanh()\n",
-       "  (flatten): Flatten()\n",
-       "  (output_1): Linear(in_features=640, out_features=10, bias=True)\n",
-       ")\n",
-       "   Network was trained for 100 epochs that took 104.7121 seconds.\n",
-       "   Final objective value is 0.069"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nnet"
    ]
@@ -243,7 +223,7 @@
     "    \n",
     "    return diff_index, 100 - ml.percent_correct(Xset_classes, Xcopy_classes)\n",
     "\n",
-    "def change_in_pixels_plot(Xset, Tset, end_pixel_val=10, trials_per_pixel=5):\n",
+    "def change_in_pixels_plot(Xset, Tset, end_pixel_val=10, trials_per_pixel=5, errorbar=True):\n",
     "    plt.figure(figsize=(14, 6))\n",
     "    change = []\n",
     "    \n",
@@ -261,8 +241,12 @@
     "    y = np.mean(change, axis=1)\n",
     "    yerr = np.std(change, axis=1)\n",
     "    \n",
-    "    plt.errorbar(x, y, yerr=yerr, marker='.', \n",
-    "                 lw=1, capsize=5, capthick=1.5, markeredgecolor='k')\n",
+    "    if errorbar:\n",
+    "        plt.errorbar(x, y, yerr=yerr, marker='.', \n",
+    "                     lw=1, capsize=5, capthick=1.5, markeredgecolor='k')\n",
+    "    else:\n",
+    "        plt.plot(x, y, marker='.', lw=1, markeredgecolor='k')\n",
+    "        \n",
     "    plt.xlabel('Number of Pixels Changed')\n",
     "    plt.ylabel('% Misclassified')\n",
     "    plt.grid(True); plt.tight_layout(); plt.show();"
@@ -351,7 +335,7 @@
     }
    ],
    "source": [
-    "change_in_pixels_plot(Xtest, Ttest, end_pixel_val=200, trials_per_pixel=3)"
+    "change_in_pixels_plot(Xtest, Ttest, end_pixel_val=5, trials_per_pixel=3, errorbar=False)"
    ]
   },
   {
