Add dataset references

--- a/TeX/references.bib
+++ b/TeX/references.bib
@@ -118,3 +118,18 @@
   biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1801-00349},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@misc{CIFAR10,
+  url = {https://www.cs.toronto.edu/~kriz/cifar.html},
+  title = {{CIFAR-}10 and {CIFAR-}100 Datasets}
+}
+
+@misc{MNIST,
+  url = {http://yann.lecun.com/exdb/mnist/},
+  title = {{MNIST} Handwritten Digit Database}
+}
+
+@misc{LISA,
+  url = {http://cvrr.ucsd.edu/LISA/lisa-traffic-sign-dataset.html},
+  title = {Laboratory for Intelligent and Safe Automobiles}
+}
