remove duplicate pdf

--- a/notebooks/stock-analysis.ipynb
+++ b/notebooks/stock-analysis.ipynb
@@ -359,9 +359,9 @@
     "print(f'''Total of {len(diff_index)} misclassified samples,\n",
     "      with a {percent_diff:.3f}% difference from test by changing {pixels_to_change} pixel(s)''')\n",
     "\n",
-    "imshow(Xtest, Xcopy, Ttest, diff_index, name='example_1px.pdf')\n",
+    "imshow(Xtest, Xcopy, Ttest, diff_index, name='mnist_example_1px.pdf')\n",
     "\n",
-    "change_in_pixels_plot(Xtest, Ttest, end_pixel_val=5, trials_per_pixel=25, name='change_5px.pdf')"
+    "change_in_pixels_plot(Xtest, Ttest, end_pixel_val=5, trials_per_pixel=25, name='mnist_change_5px.pdf')"
    ]
   },
   {
@@ -401,7 +401,7 @@
    ],
    "source": [
     "change_in_pixels_plot(Xtest, Ttest, end_pixel_val=250, trials_per_pixel=1,\n",
-    "                      errorbar=False, name='change_overtime.pdf')"
+    "                      errorbar=False, name='mnist_change_overtime.pdf')"
    ]
   }
  ],
