--- a/notebooks/single-pixel-study.ipynb
+++ b/notebooks/single-pixel-study.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,16 +60,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2019-11-20 22:54:22--  http://deeplearning.net/data/mnist/mnist.pkl.gz\n",
+      "Resolving deeplearning.net (deeplearning.net)... 132.204.26.28\n",
+      "Connecting to deeplearning.net (deeplearning.net)|132.204.26.28|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 16168813 (15M) [application/x-gzip]\n",
+      "Saving to: ‘mnist.pkl.gz’\n",
+      "\n",
+      "mnist.pkl.gz        100%[===================>]  15.42M  6.57MB/s    in 2.3s    \n",
+      "\n",
+      "2019-11-20 22:54:25 (6.57 MB/s) - ‘mnist.pkl.gz’ saved [16168813/16168813]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "!wget http://deeplearning.net/data/mnist/mnist.pkl.gz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,26 +116,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "GPU is not available. Running on CPU.\n",
-      "\n",
-      "Epoch 10 error 0.57439\n",
-      "Epoch 20 error 0.33755\n",
-      "Epoch 30 error 0.30596\n",
-      "Epoch 40 error 0.25573\n",
-      "Epoch 50 error 0.17485\n",
-      "Epoch 60 error 0.13297\n",
-      "Epoch 70 error 0.11122\n",
-      "Epoch 80 error 0.09734\n",
-      "Epoch 90 error 0.08711\n",
-      "Epoch 100 error 0.07920\n"
+      "Epoch 10 error 0.51125\n",
+      "Epoch 20 error 0.34728\n",
+      "Epoch 30 error 0.22182\n",
+      "Epoch 40 error 0.15633\n",
+      "Epoch 50 error 0.12459\n",
+      "Epoch 60 error 0.10382\n",
+      "Epoch 70 error 0.09022\n",
+      "Epoch 80 error 0.07987\n",
+      "Epoch 90 error 0.07177\n",
+      "Epoch 100 error 0.06514\n"
      ]
     }
    ],
@@ -134,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,18 +162,18 @@
        "                            kernels_size_and_stride=[(7, 3)],\n",
        "                            n_units_in_fc_hidden_layers=[],\n",
        "                            classes=[0 1 2 3 4 5 6 7 8 9],\n",
-       "                            use_gpu=False)\n",
+       "                            use_gpu=True)\n",
        "Sequential(\n",
        "  (conv_0): Conv2d(1, 10, kernel_size=(7, 7), stride=(3, 3))\n",
        "  (output_0): Tanh()\n",
        "  (flatten): Flatten()\n",
        "  (output_1): Linear(in_features=640, out_features=10, bias=True)\n",
        ")\n",
-       "   Network was trained for 100 epochs that took 177.8446 seconds.\n",
-       "   Final objective value is 0.079"
+       "   Network was trained for 100 epochs that took 13.1176 seconds.\n",
+       "   Final objective value is 0.065"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,14 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Percentage: 97.768%, Test Percentage: 96.270%\n"
+      "Train Percentage: 98.124%, Test Percentage: 96.850%\n"
      ]
     }
    ],
@@ -191,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -200,31 +215,21 @@
      "text": [
       "       0    1    2    3    4    5    6    7    8    9\n",
       "    ------------------------------------------------------------\n",
-      " 0 | 98.1  0    0.1  0.1  0.1  0.4  0.7  0.1  0.4  0  \n",
-      " 1 |  0   98.8  0.2  0.1  0    0.3  0.1  0.1  0.5  0  \n",
-      " 2 |  0.6  0.8 94.6  1.2  0.4  0.1  0.5  0.9  0.9  0.2\n",
-      " 3 |  0.1  0    0.9 96.5  0    1.5  0    0.5  0.4  0.1\n",
-      " 4 |  0    0.1  0.3  0.1 97.6  0    0.5  0.1  0.3  1.0\n",
-      " 5 |  0.3  0.1  0.3  1.5  0   95.2  0.6  0.3  1.5  0.2\n",
-      " 6 |  0.9  0.4  0.2  0.1  0.4  0.9 96.6  0.1  0.3  0  \n",
-      " 7 |  0.1  0.4  1.7  0.9  0.3  0.1  0   95.2  0.2  1.2\n",
-      " 8 |  0.7  0.2  0.5  1.0  0.6  0.9  0.1  0.7 94.9  0.3\n",
-      " 9 |  0.4  0.5  0    0.5  1.4  0.8  0    1.1  0.3 95.0\n"
+      " 0 | 98.2  0    0    0    0    0.3  0.8  0    0.4  0.3\n",
+      " 1 |  0   98.6  0.2  0.2  0.1  0.1  0.4  0.1  0.4  0  \n",
+      " 2 |  0.4  0.1 96.4  0.6  0.4  0.1  0.4  0.9  0.7  0.1\n",
+      " 3 |  0    0    1.0 96.9  0    0.8  0    0.9  0.2  0.2\n",
+      " 4 |  0.1  0.1  0.3  0   97.7  0    0.5  0    0.3  1.0\n",
+      " 5 |  0.6  0.2  0.2  1.6  0   96.2  0.4  0    0.6  0.2\n",
+      " 6 |  0.7  0.3  0.1  0    0.3  0.7 97.7  0    0.1  0  \n",
+      " 7 |  0.1  0.7  1.4  0.5  0.1  0    0   95.8  0.1  1.4\n",
+      " 8 |  0.7  0    0.9  0.7  0.7  0.4  0.2  0.7 95.1  0.5\n",
+      " 9 |  0.4  0.3  0    0.4  1.0  1.1  0    0.8  0.3 95.7\n"
      ]
     }
    ],
    "source": [
     "_ = ml.confusion_matrix(Ttest, classes, np.unique(Ttest))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import imp\n",
-    "imp.reload(per);"
    ]
   },
   {
@@ -339,9 +344,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100  162M  100  162M    0     0  63.7M      0  0:00:02  0:00:02 --:--:-- 63.7M\n",
+      "cifar-10-batches-py/\n",
+      "cifar-10-batches-py/data_batch_4\n",
+      "cifar-10-batches-py/readme.html\n",
+      "cifar-10-batches-py/test_batch\n",
+      "cifar-10-batches-py/data_batch_3\n",
+      "cifar-10-batches-py/batches.meta\n",
+      "cifar-10-batches-py/data_batch_2\n",
+      "cifar-10-batches-py/data_batch_5\n",
+      "cifar-10-batches-py/data_batch_1\n"
+     ]
+    }
+   ],
    "source": [
     "!curl -O http://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
     "!tar -xvf cifar-10-python.tar.gz"
@@ -349,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -385,8 +409,40 @@
     "    \n",
     "with open('cifar-10-batches-py/batches.meta', 'rb') as f:\n",
     "    class_names = pickle.load(f, encoding='bytes')\n",
-    "class_names = class_names[b'label_names']\n",
-    "classes = np.unique(Ttrain)"
+    "class_names = class_names[b'label_names']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "CUDA out of memory. Tried to allocate 5.37 GiB (GPU 0; 11.93 GiB total capacity; 7.67 GiB already allocated; 1.24 GiB free; 179.84 MiB cached)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-75-0d12c5d7d46d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m                                    \u001b[0mn_units_in_fc_hidden_layers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m                                    classes=np.unique(Ttrain), use_gpu=True)\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mnnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Adam'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.001\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/cs545/augmented-image-classification/src/neuralnetworkclassifier.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, X, T, n_epochs, optim, learning_rate, verbose)\u001b[0m\n\u001b[1;32m    156\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    157\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 158\u001b[0;31m             \u001b[0mY\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnnet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    159\u001b[0m             \u001b[0merror\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    160\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror_trace\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda-2019.07/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    545\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    546\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 547\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    548\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    549\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda-2019.07/lib/python3.7/site-packages/torch/nn/modules/container.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m     90\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mmodule\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_modules\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m             \u001b[0minput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodule\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda-2019.07/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    545\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    546\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 547\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    548\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    549\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda-2019.07/lib/python3.7/site-packages/torch/nn/modules/activation.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    293\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    294\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 295\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtanh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    296\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    297\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: CUDA out of memory. Tried to allocate 5.37 GiB (GPU 0; 11.93 GiB total capacity; 7.67 GiB already allocated; 1.24 GiB free; 179.84 MiB cached)"
+     ]
+    }
+   ],
+   "source": [
+    "nnet = nnc.NeuralNetwork_Convolutional(n_channels_in_image=Xtrain.shape[1],\n",
+    "                                   image_size=Xtrain.shape[2],\n",
+    "                                   n_units_in_conv_layers=[32, 64],\n",
+    "                                   kernels_size_and_stride=[(3, 1), (3, 1)],\n",
+    "                                   n_units_in_fc_hidden_layers=[], \n",
+    "                                   classes=np.unique(Ttrain), use_gpu=True)\n",
+    "\n",
+    "nnet.train(Xtrain, Ttrain, 100, optim='Adam', learning_rate=0.001, verbose=True)"
    ]
   },
   {
@@ -395,15 +451,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nnet = nnc.NeuralNetwork_Convolutional(n_channels_in_image=Xtrain.shape[1],\n",
-    "                                   image_size=Xtrain.shape[2],\n",
-    "                                   n_units_in_conv_layers=[15, 5],\n",
-    "                                   kernels_size_and_stride=[(6, 2), (4, 2)],\n",
-    "                                   n_units_in_fc_hidden_layers=[50], \n",
-    "                                   classes=classes,\n",
-    "                                   use_gpu=True)\n",
+    "plt.plot(nnet.get_error_trace());"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_percent = ml.percent_correct(Ttrain, nnet.use(Xtrain)[0])\n",
     "\n",
-    "nnet.train(Xtrain, Ttrain, 2000, optim='Adam', learning_rate=0.001, verbose=True)"
+    "classes, Y    = nnet.use(Xtest)\n",
+    "test_percent  = ml.percent_correct(Ttest, classes)\n",
+    "\n",
+    "print(f'Train Percentage: {train_percent:.3f}%, Test Percentage: {test_percent:.3f}%')"
    ]
   },
   {
