added max pooling 2d code to NN class

--- a/notebooks/single-pixel-study.ipynb
+++ b/notebooks/single-pixel-study.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -116,23 +116,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import imp\n",
+    "imp.reload(nnc);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10 error 0.51125\n",
-      "Epoch 20 error 0.34728\n",
-      "Epoch 30 error 0.22182\n",
-      "Epoch 40 error 0.15633\n",
-      "Epoch 50 error 0.12459\n",
-      "Epoch 60 error 0.10382\n",
-      "Epoch 70 error 0.09022\n",
-      "Epoch 80 error 0.07987\n",
-      "Epoch 90 error 0.07177\n",
-      "Epoch 100 error 0.06514\n"
+      "\n",
+      "GPU is not available. Running on CPU.\n",
+      "\n",
+      "Epoch 10 error 0.74240\n",
+      "Epoch 20 error 0.44267\n",
+      "Epoch 30 error 0.31437\n",
+      "Epoch 40 error 0.24800\n",
+      "Epoch 50 error 0.20788\n",
+      "Epoch 60 error 0.18009\n",
+      "Epoch 70 error 0.16066\n",
+      "Epoch 80 error 0.14642\n",
+      "Epoch 90 error 0.13565\n",
+      "Epoch 100 error 0.12715\n"
      ]
     }
    ],
@@ -141,6 +154,7 @@
     "                                       image_size=Xtrain.shape[2],\n",
     "                                       n_units_in_conv_layers=[10], \n",
     "                                       kernels_size_and_stride=[(7, 3)],\n",
+    "                                       max_pooling_kernels_and_stride=[(2, 2)],\n",
     "                                       n_units_in_fc_hidden_layers=[],\n",
     "                                       classes=np.unique(Ttrain), use_gpu=True)\n",
     "\n",
@@ -149,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -160,20 +174,22 @@
        "                            image_size=28,\n",
        "                            n_units_in_conv_layers=[10],\n",
        "                            kernels_size_and_stride=[(7, 3)],\n",
+       "                            max_pooling_kernels_and_stride=[(2, 2)],\n",
        "                            n_units_in_fc_hidden_layers=[],\n",
        "                            classes=[0 1 2 3 4 5 6 7 8 9],\n",
-       "                            use_gpu=True)\n",
+       "                            use_gpu=False)\n",
        "Sequential(\n",
        "  (conv_0): Conv2d(1, 10, kernel_size=(7, 7), stride=(3, 3))\n",
        "  (output_0): Tanh()\n",
+       "  (pool_0): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
        "  (flatten): Flatten()\n",
-       "  (output_1): Linear(in_features=640, out_features=10, bias=True)\n",
+       "  (output_1): Linear(in_features=160, out_features=10, bias=True)\n",
        ")\n",
-       "   Network was trained for 100 epochs that took 13.1176 seconds.\n",
-       "   Final objective value is 0.065"
+       "   Network was trained for 100 epochs that took 195.7844 seconds.\n",
+       "   Final objective value is 0.127"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Percentage: 98.124%, Test Percentage: 96.850%\n"
+      "Train Percentage: 96.222%, Test Percentage: 96.120%\n"
      ]
     }
    ],
@@ -206,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -215,16 +231,16 @@
      "text": [
       "       0    1    2    3    4    5    6    7    8    9\n",
       "    ------------------------------------------------------------\n",
-      " 0 | 98.2  0    0    0    0    0.3  0.8  0    0.4  0.3\n",
-      " 1 |  0   98.6  0.2  0.2  0.1  0.1  0.4  0.1  0.4  0  \n",
-      " 2 |  0.4  0.1 96.4  0.6  0.4  0.1  0.4  0.9  0.7  0.1\n",
-      " 3 |  0    0    1.0 96.9  0    0.8  0    0.9  0.2  0.2\n",
-      " 4 |  0.1  0.1  0.3  0   97.7  0    0.5  0    0.3  1.0\n",
-      " 5 |  0.6  0.2  0.2  1.6  0   96.2  0.4  0    0.6  0.2\n",
-      " 6 |  0.7  0.3  0.1  0    0.3  0.7 97.7  0    0.1  0  \n",
-      " 7 |  0.1  0.7  1.4  0.5  0.1  0    0   95.8  0.1  1.4\n",
-      " 8 |  0.7  0    0.9  0.7  0.7  0.4  0.2  0.7 95.1  0.5\n",
-      " 9 |  0.4  0.3  0    0.4  1.0  1.1  0    0.8  0.3 95.7\n"
+      " 0 | 98.8  0    0.1  0.1  0    0    0.5  0.2  0.3  0  \n",
+      " 1 |  0   98.5  0.3  0    0.1  0.1  0.4  0.1  0.6  0  \n",
+      " 2 |  0.8  0.1 95.1  0.7  0.6  0.1  0.3  0.8  1.2  0.5\n",
+      " 3 |  0    0    0.8 95.5  0.1  1.1  0.1  0.9  1.1  0.4\n",
+      " 4 |  0.1  0.3  0.4  0.1 96.0  0    0.6  0.7  0.2  1.5\n",
+      " 5 |  0.4  0.1  0.2  1.2  0.2 96.6  0.4  0.1  0.3  0.2\n",
+      " 6 |  1.4  0.1  0.1  0    0.6  0.6 96.8  0    0.3  0.1\n",
+      " 7 |  0.1  0.7  1.8  0.4  0.4  0    0   94.8  0    1.8\n",
+      " 8 |  0.2  0.1  0.7  1.3  0.6  0.6  0.3  0.7 94.7  0.7\n",
+      " 9 |  0.3  0.4  0.2  0.6  1.4  0.6  0    1.8  0.5 94.3\n"
      ]
     }
    ],
