added padding, batchnorm, etc..

--- a/notebooks/single-pixel-study.ipynb
+++ b/notebooks/single-pixel-study.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,42 +814,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10 error 1.16042\n",
-      "Epoch 20 error 0.96773\n",
-      "Epoch 30 error 0.87261\n",
-      "Epoch 40 error 0.80681\n",
-      "Epoch 50 error 0.75276\n",
-      "Epoch 60 error 0.70549\n",
-      "Epoch 70 error 0.66517\n",
-      "Epoch 80 error 0.63013\n",
-      "Epoch 90 error 0.59858\n",
-      "Epoch 100 error 0.57029\n"
+      "Epoch 2 error 0.63452\n",
+      "Epoch 4 error 0.42093\n",
+      "Epoch 6 error 0.29845\n",
+      "Epoch 8 error 0.42862\n",
+      "Epoch 10 error 0.11416\n",
+      "Epoch 12 error 0.08544\n",
+      "Epoch 14 error 0.04623\n",
+      "Epoch 16 error 0.02183\n",
+      "Epoch 18 error 0.11998\n",
+      "Epoch 20 error 0.05028\n"
      ]
     }
    ],
    "source": [
     "nnet = nnc.NeuralNetwork_Convolutional(n_channels_in_image=Xtrain.shape[1],\n",
     "                                   image_size=Xtrain.shape[2],\n",
-    "                                   n_units_in_conv_layers=[128, 64, 64],\n",
-    "                                   kernels_size_and_stride=[(4, 2), (2, 1), (2, 1)],\n",
-    "                                   max_pooling_kernels_and_stride=[(2, 2), (2, 2), ()],\n",
+    "                                   n_units_in_conv_layers=[64, 64, 128, 128, 256, 256, 512, 512],\n",
+    "                                   kernels_size_and_stride=[(3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1)],\n",
+    "                                   max_pooling_kernels_and_stride=[(), (2, 2), (), (2, 2), (), (2, 2), (), (2, 2)],\n",
     "                                   n_units_in_fc_hidden_layers=[], \n",
     "                                   classes=np.unique(Ttrain), use_gpu=True)\n",
     "\n",
-    "nnet.train(Xtrain, Ttrain, n_epochs=100, batch_size=1500,\n",
-    "           optim='Adam', learning_rate=0.0004, verbose=True)"
+    "nnet.train(Xtrain, Ttrain, n_epochs=20, batch_size=100,\n",
+    "           optim='Adam', learning_rate=0.0005, verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -858,29 +858,53 @@
        "NeuralNetwork_Convolutional(\n",
        "                            n_channels_in_image=3,\n",
        "                            image_size=32,\n",
-       "                            n_units_in_conv_layers=[128, 64, 64],\n",
-       "                            kernels_size_and_stride=[(4, 2), (2, 1), (2, 1)],\n",
-       "                            max_pooling_kernels_and_stride=[(2, 2), (2, 2), ()],\n",
+       "                            n_units_in_conv_layers=[64, 64, 128, 128, 256, 256, 512, 512],\n",
+       "                            kernels_size_and_stride=[(3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1)],\n",
+       "                            max_pooling_kernels_and_stride=[(), (2, 2), (), (2, 2), (), (2, 2), (), (2, 2)],\n",
        "                            n_units_in_fc_hidden_layers=[],\n",
        "                            classes=[0 1 2 3 4 5 6 7 8 9],\n",
        "                            use_gpu=True)\n",
        "Sequential(\n",
-       "  (conv_0): Conv2d(3, 128, kernel_size=(4, 4), stride=(2, 2))\n",
-       "  (output_0): Tanh()\n",
-       "  (pool_0): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "  (conv_1): Conv2d(128, 64, kernel_size=(2, 2), stride=(1, 1))\n",
-       "  (output_1): Tanh()\n",
+       "  (conv_0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_0): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_0): ReLU()\n",
+       "  (conv_1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_1): ReLU()\n",
        "  (pool_1): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "  (conv_2): Conv2d(64, 64, kernel_size=(2, 2), stride=(1, 1))\n",
-       "  (output_2): Tanh()\n",
+       "  (drop_1): Dropout(p=0.2, inplace=False)\n",
+       "  (conv_2): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_2): ReLU()\n",
+       "  (conv_3): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_3): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_3): ReLU()\n",
+       "  (pool_3): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (drop_3): Dropout(p=0.2, inplace=False)\n",
+       "  (conv_4): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_4): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_4): ReLU()\n",
+       "  (conv_5): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_5): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_5): ReLU()\n",
+       "  (pool_5): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (drop_5): Dropout(p=0.2, inplace=False)\n",
+       "  (conv_6): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_6): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_6): ReLU()\n",
+       "  (conv_7): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_7): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_7): ReLU()\n",
+       "  (pool_7): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (drop_7): Dropout(p=0.2, inplace=False)\n",
        "  (flatten): Flatten()\n",
-       "  (output_3): Linear(in_features=256, out_features=10, bias=True)\n",
+       "  (output_8): Linear(in_features=2048, out_features=10, bias=True)\n",
        ")\n",
-       "   Network was trained for 100 epochs with a batch size of 1500 and took 80.1130 seconds.\n",
-       "   Final objective value is 0.570"
+       "   Network was trained for 20 epochs with a batch size of 100 and took 378.3016 seconds.\n",
+       "   Final objective value is 0.050"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,20 +915,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Percentage: 80.716%, Test Percentage: 70.160%\n"
+      "Test Percentage: 87.050%\n"
      ]
     }
    ],
    "source": [
-    "train_percent = ml.percent_correct(Ttrain, nnet.use(Xtrain)[0])\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "for img, t in zip(Xtest, Ttest):\n",
+    "    if nnet.use([img])[0] == t:\n",
+    "        correct += 1\n",
+    "    total += 1\n",
+    "    \n",
+    "percent = (correct / total) * 100 \n",
+    "print(f'Test Percentage: {percent:.3f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try:\n",
+    "#     train_percent = -1 #ml.percent_correct(Ttrain, nnet.use(Xtrain)[0])\n",
+    "# except:\n",
+    "#     train_percent = -1\n",
     "\n",
+    "\n",
+    "    \n",
     "classes, Y    = nnet.use(Xtest)\n",
     "test_percent  = ml.percent_correct(Ttest, classes)\n",
     "\n",
