--- a/notebooks/Dolan-Noise.ipynb
+++ b/notebooks/Dolan-Noise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "import perturb as per\n",
     "import dataset_manipulations as dm\n",
     "\n",
+    "import pickle, gzip\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import itertools\n",
@@ -31,22 +32,22 @@
     "\n",
     "from matplotlib import rc\n",
     "rc('font',**{'family':'sans-serif','sans-serif':['Helvetica']})\n",
-    "# rc('text', usetex=True)\n",
+    "rc('text', usetex=True)\n",
     "plt.style.use('seaborn-whitegrid')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'dataset_manipulations' from '../src/dataset_manipulations.py'>"
+       "<module 'neuralnetworkclassifier' from '../src/neuralnetworkclassifier.py'>"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +55,8 @@
    "source": [
     "import imp\n",
     "imp.reload(per)\n",
-    "imp.reload(dm)"
+    "imp.reload(dm)\n",
+    "imp.reload(nnc)"
    ]
   },
   {
@@ -594,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
