introduced notebook for constant model training

--- a/notebooks/constant-model-analysis.ipynb
+++ b/notebooks/constant-model-analysis.ipynb
@@ -53,13 +53,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import imp\n",
     "imp.reload(per);\n",
     "imp.reload(ml);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "XX = np.zeros((3, 3, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0., 5., 5.],\n",
+       "        [0., 0., 0.],\n",
+       "        [0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0.],\n",
+       "        [0., 0., 0.],\n",
+       "        [0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0.],\n",
+       "        [0., 0., 0.],\n",
+       "        [0., 0., 0.]]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "XX[0, 0, 1] = 5\n",
+    "XX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def augmented_training(Xtrain, Ttrain, Xtest, Ttest, model='MNIST'):\n",
+    "\n",
+    "    perturbs = ['stuck', 'dead', 'hot']\n",
+    "    \n",
+    "    test_pixel_change = 2\n",
+    "    trials = 25\n",
+    "    training_pixels = [1, 5, 10]\n",
+    "    \n",
+    "    for i, perturb in enumerate(perturbs):\n",
+    "        \n",
+    "        natural_acc = []\n",
+    "        augmented_acc = np.zeros((len(perturbs), 3, len(training_pixels))) # perturb - > acc (y), mean, std\n",
+    "        \n",
+    "        for p, pixels in enumerate(training_pixels):\n",
+    "\n",
+    "            Mtrain = per.change_pixel(Xtrain, pixels_to_change=pixels+1, pertrub=perturb)\n",
+    "\n",
+    "            if model == 'MNIST':\n",
+    "                nnet = train_mnist(Mtrain, Ttrain)\n",
+    "            else:\n",
+    "                nnet = train_cifar(Mtrain, Ttrain)\n",
+    "                \n",
+    "            natural_acc.append(ml.percent_correct(ml.batched_use(nnet, Xtest), Ttest))\n",
+    "            \n",
+    "            for t, test in enumerate(perturbs):\n",
+    "                tmp = []\n",
+    "                for trial in range(len(trials)):\n",
+    "\n",
+    "                    M = per.change_pixel(Xtest, pixels_to_change=test_pixel_change, pertrub='stuck')\n",
+    "            Mtest_stuck = per.change_pixel(Xtest, pixels_to_change=test_pixel_change, pertrub='stuck')\n",
+    "            Mtest_dead = per.change_pixel(Xtest, pixels_to_change=test_pixel_change, pertrub='dead')\n",
+    "            Mtest_hot = per.change_pixel(Xtest, pixels_to_change=test_pixel_change, pertrub='hot')\n",
+    "\n",
+    "            stuck_acc.append(ml.percent_correct(ml.batched_use(nnet, Mtest_stuck), Ttest))\n",
+    "            dead_acc.append(ml.percent_correct(ml.batched_use(nnet, Mtest_dead), Ttest))\n",
+    "            hot_acc.append(ml.percent_correct(ml.batched_use(nnet, Mtest_hot), Ttest))"
    ]
   },
   {
@@ -98,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -124,6 +208,13 @@
     "\n",
     "print(Xtrain.shape, Ttrain.shape, Xtest.shape, Ttest.shape, Xvalid.shape, Tvalid.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -904,6 +995,31 @@
     "\n",
     "per.imshow(nnet, Xtest, Xcopy, Ttest, diff_index, model='CIFAR', \n",
     "           display='grid', name='media/cifar_example_grid_1var_noise.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.001\n",
+      "0.013250000000000001\n",
+      "0.025500000000000002\n",
+      "0.037750000000000006\n",
+      "0.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "var_range=(0.001, 0.05)\n",
+    "num_steps=5\n",
+    "\n",
+    "for var_step in np.linspace(var_range[0], var_range[1], num_steps):\n",
+    "    print(var_step)"
    ]
   },
   {
